[package]
name = "redsyncmodulelib"
version = "0.1.0"
authors = ["Iván Molina Rebolledo"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.9.8"
hmac = "0.11"
pbkdf2 = { version = "0.9.0", default-features = false }
hkdf = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.28"
wee_alloc = { version = "0.4.5", optional = true }
wasm-tracing-allocator = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "io-util", "net", "time"] }

[dev-dependencies]
sha2 = "0.9"

[profile.release]
lto = true
